third_party/move/move-bytecode-verifier/transactional-tests/tests/control_flow/invalid_fallthrough1.exp
processed 1 task
task 0 lines 1-3:  run [script]
Error: error: script functions must have a body
  ┌─ test:1:1
  │
1 │ 
  │ ^


